<resources>
    <string name="app_name">kemo</string>
    <string name="drink_something">喝点什么呢？</string>
    <string name="milk">牛奶</string>
    <string name="fruit_tea">果茶</string>
    <string name="milk_tea">奶茶</string>
    <string name="limit">限定</string>
    <string name="try_to_search">搜搜看吧！</string>
    <string name="user_avatar">用户头像</string>
    <string name="rank_name">饮品达人</string>
    <string name="rank_level">Lv. 2</string>
    <string name="vip_center">会员中心</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_coupon">优惠券</string>
    <string name="my_reward_points_mall">积分商城</string>
    <string name="my_address">我的地址</string>
    <string name="my_account_safety">账户安全</string>
    <string name="my_contact_service">联系客服</string>
    <string name="invite_text">邀请好友，得免费赠饮</string>
    <string name="invite_sub_text">邀请好友页</string>
</resources>