<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bg_mine_top_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/iv_settings"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/icon_setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="-65dp"
        android:background="@drawable/bg_corner_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shapeableImageView" />

    <TextView
        android:id="@+id/tv_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rank_name"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/shapeableImageView"
        app:layout_constraintStart_toStartOf="@+id/shapeableImageView"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView" />

    <TextView
        android:id="@+id/tv_level"
        android:layout_width="75dp"
        android:layout_height="32dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:background="@drawable/tv_rank_bg_gradient"
        android:gravity="center"
        android:text="@string/rank_level"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_rank"
        app:layout_constraintStart_toStartOf="@+id/tv_rank"
        app:layout_constraintTop_toBottomOf="@+id/tv_rank" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:background="@drawable/bg_tv_vip_center"
        android:gravity="center"
        android:text="@string/vip_center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="100dp"
        android:src="@mipmap/user_avatar"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_corner_view"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:layout_editor_absoluteX="20dp" />

    <ImageView
        android:id="@+id/iv_favorite"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/my_favorite"
        app:layout_constraintEnd_toStartOf="@+id/iv_coupon"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <TextView
        android:id="@+id/tv_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/my_collection"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_favorite"
        app:layout_constraintStart_toStartOf="@+id/iv_favorite"
        app:layout_constraintTop_toBottomOf="@+id/iv_favorite" />

    <ImageView
        android:id="@+id/iv_coupon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/my_coupon"
        app:layout_constraintEnd_toStartOf="@+id/iv_reward_points_mall"
        app:layout_constraintStart_toEndOf="@+id/iv_favorite"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <TextView
        android:id="@+id/tv_coupon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/my_coupon"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_coupon"
        app:layout_constraintStart_toStartOf="@+id/iv_coupon"
        app:layout_constraintTop_toBottomOf="@+id/iv_coupon" />

    <ImageView
        android:id="@+id/iv_reward_points_mall"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/my_reward_points_mall"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toEndOf="@+id/iv_coupon"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <TextView
        android:id="@+id/tv_reward_points_mall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/my_reward_points_mall"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_reward_points_mall"
        app:layout_constraintStart_toStartOf="@+id/iv_reward_points_mall"
        app:layout_constraintTop_toBottomOf="@+id/iv_reward_points_mall" />

    <ImageView
        android:id="@+id/iv_address"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/my_address"
        app:layout_constraintEnd_toEndOf="@+id/iv_favorite"
        app:layout_constraintStart_toStartOf="@+id/iv_favorite"
        app:layout_constraintTop_toBottomOf="@+id/tv_favorite" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/my_address"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_address"
        app:layout_constraintStart_toStartOf="@+id/iv_address"
        app:layout_constraintTop_toBottomOf="@+id/iv_address" />


    <ImageView
        android:id="@+id/iv_account_safety"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/my_account_safety"
        app:layout_constraintEnd_toEndOf="@+id/iv_coupon"
        app:layout_constraintStart_toStartOf="@+id/iv_coupon"
        app:layout_constraintTop_toTopOf="@+id/iv_address" />

    <TextView
        android:id="@+id/tv_account_safety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/my_account_safety"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_account_safety"
        app:layout_constraintStart_toStartOf="@+id/iv_account_safety"
        app:layout_constraintTop_toBottomOf="@+id/iv_address" />


    <ImageView
        android:id="@+id/iv_contact_service"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/my_contact_service"
        app:layout_constraintEnd_toEndOf="@+id/iv_reward_points_mall"
        app:layout_constraintStart_toStartOf="@+id/iv_reward_points_mall"
        app:layout_constraintTop_toTopOf="@+id/iv_account_safety" />

    <TextView
        android:id="@+id/tv_contact_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/my_contact_service"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_contact_service"
        app:layout_constraintStart_toStartOf="@+id/iv_contact_service"
        app:layout_constraintTop_toBottomOf="@+id/iv_contact_service" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_corner_gradient_view"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/invite_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invite_sub_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/splash_icon"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/icon_left_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4" />
</androidx.constraintlayout.widget.ConstraintLayout>