<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".ui.fragment.HomeFragment">

    <!-- 局部动态状态栏分割线 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp" />

    <!-- ========== 顶部：SearchBar 扁平化（无LinearLayout包裹），改为依赖于 guideline ========== -->
    <com.google.android.material.search.SearchBar
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/color_search"
        android:hint="@string/drink_something"
        android:outlineAmbientShadowColor="@color/outlineAmbientShadowColor"
        android:outlineSpotShadowColor="@color/outlineSpotShadowColor"
        app:elevation="14dp"
        app:navigationIcon="@android:drawable/ic_menu_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_guideline"
        app:layout_constraintEnd_toStartOf="@id/iv_avatar"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_avatar"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/user_avatar"
        android:scaleType="centerCrop"
        android:src="@mipmap/user_avatar"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/search_bar"
        app:layout_constraintBottom_toBottomOf="@id/search_bar"/>


    <!-- ========== 主体滚动区域 ========== -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.youth.banner.Banner
                android:id="@+id/banner_drink"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                app:banner_indicator_normal_color="#D8D8D8"
                app:banner_indicator_selected_color="#F7A37E"
                app:banner_indicator_selected_width="10dp"
                app:banner_indicator_space="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_milk"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:background="@mipmap/categories_fresh_milk"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toStartOf="@+id/img_fruit_tea"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/banner_drink"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

            <TextView
                android:id="@+id/tv_milk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/milk"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/img_milk"
                app:layout_constraintStart_toStartOf="@+id/img_milk"
                app:layout_constraintTop_toBottomOf="@id/img_milk" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_fruit_tea"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@mipmap/categories_fruit_tea"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toStartOf="@+id/img_milk_tea"
                app:layout_constraintStart_toEndOf="@+id/img_milk"
                app:layout_constraintTop_toTopOf="@+id/img_milk"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

            <TextView
                android:id="@+id/tv_fruit_tea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fruit_tea"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/img_fruit_tea"
                app:layout_constraintStart_toStartOf="@+id/img_fruit_tea"
                app:layout_constraintTop_toBottomOf="@+id/img_fruit_tea" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_milk_tea"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@mipmap/categories_milk_tea"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toStartOf="@+id/img_limited_edition"
                app:layout_constraintStart_toEndOf="@+id/img_fruit_tea"
                app:layout_constraintTop_toTopOf="@+id/img_milk"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

            <TextView
                android:id="@+id/tv_milk_tea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/milk_tea"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/img_milk_tea"
                app:layout_constraintStart_toStartOf="@+id/img_milk_tea"
                app:layout_constraintTop_toBottomOf="@+id/img_milk_tea" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_limited_edition"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@mipmap/categories_limit_edition"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_milk_tea"
                app:layout_constraintTop_toTopOf="@+id/img_milk"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

            <TextView
                android:id="@+id/tv_limited_edition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limit"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/img_limited_edition"
                app:layout_constraintStart_toStartOf="@+id/img_limited_edition"
                app:layout_constraintTop_toBottomOf="@+id/img_limited_edition" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_drink_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/img_limited_edition"
                app:layout_constraintStart_toStartOf="@+id/img_milk"
                app:layout_constraintTop_toBottomOf="@+id/tv_milk"
                tools:layout_height="300dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>